Fixed vertical align bug

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,11 +5,16 @@ body {
 }
 
 .center {
-	width: 100%;
-	height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	height: 75%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    img {
+    	margin: 0 auto;
+    }
 }
 
 article {
